[workspace]
members = [
    "sylphie/sylphie",
    "sylphie/sylphie_commands",
    "sylphie/sylphie_connections",
    "sylphie/sylphie_core",
    "sylphie/sylphie_database",
    "sylphie/sylphie_derive",
    "sylphie/sylphie_utils",

    # Modules
    "sylphie_mod_core",
    "sylphie_mod_discord",

    # Misc
    "sylphie_test_bot",
]

[profile.release]
opt-level = 3
debug = 1
lto = true
