[package]
name = "sylphie"
version = "0.1.0"
authors = ["Lymia Aluysia <lymia@lymiahugs.com>"]
edition = "2018"

[features]

[dependencies]
derive_setters = "0.1.4"
enumset = "1.0.0"
futures = "0.3.0"
static-events = { version = "0.2.0", git = "https://github.com/Lymia/static-events.git" }
tracing = { version = "0.1.10", features = ["log"] }

sylphie_commands = { version = "0.1.0", path = "../sylphie_commands" }
sylphie_core = { version = "0.1.0", path = "../sylphie_core" }
sylphie_database = { version = "0.1.0", path = "../sylphie_database" }
sylphie_derive = { version = "0.1.0", path = "../sylphie_derive" }

[dev-dependencies]
backtrace = "0.3.48"
