[package]
name = "sylphie_database"
version = "0.1.0"
authors = ["Lymia Aluysia <lymia@lymiahugs.com>"]
edition = "2018"

[features]

[dependencies]
async-trait = "0.1.36"
bincode = "1.3.1"
chrono = "0.4.11"
enumset = "1.0.0"
evmap = "10.0.2"
futures = "0.3.0"
futures-async-stream = "0.2.2"
parking_lot = "0.11.0"
rusqlite = "0.23.0"
serde = "1.0.114"
serde_bytes = "0.11.5"
serde_cbor = "0.11.1"
serde_rusqlite = "0.25.0"
static-events = { version = "0.2.0", git = "https://github.com/Lymia/static-events.git" }
tokio = { version = "0.2.21", features = ["full"] }
tracing = { version = "0.1.10", features = ["log"] }

sylphie_core = { version = "0.1.0", path = "../sylphie_core" }
