[package]
name = "sylphie_derive"
version = "0.1.0"
authors = ["Lymia Aluysia <lymia@lymiahugs.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
darling = "0.10.2"
git2 = "0.13.2"
static-events_internals = { version = "0.1.0", git = "https://github.com/Lymia/static-events.git" }
syn = "1"
quote = "1"
proc-macro2 = "1"
