[package]
name = "sylphie_connections"
version = "0.1.0"
authors = ["Lymia Aluysia <lymia@lymiahugs.com>"]
edition = "2018"

[features]

[dependencies]
arc-swap = "1.0"
async-trait = "0.1.36"
fxhash = "0.2.1"
serde = { version = "1.0.114", features = ["derive", "rc"] }
static-events = { version = "0.2.0", git = "https://github.com/Lymia/static-events.git" }
tokio = { version = "0.2.21", features = ["full"] }

sylphie_core = { version = "0.1.0", path = "../sylphie_core" }
sylphie_database = { version = "0.1.0", path = "../sylphie_database" }
sylphie_utils = { version = "0.1.0", path = "../sylphie_utils" }
