[package]
name = "sylphie_core"
version = "0.1.0"
authors = ["Lymia Aluysia <lymia@lymiahugs.com>"]
edition = "2018"

[features]

[dependencies]
arc-swap = "1.0"
backtrace = "0.3.48"
chrono = "0.4.11"
enumset = "1.0.0"
fs2 = "0.4.3"
futures = "0.3.0"
lazy_static = "1.4.0"
linefeed = "0.6.0"
parking_lot = { version = "0.11.0", features = ["deadlock_detection"] }
serde = { version = "1.0", features = ["derive"] }
static-events = { version = "0.2.0", git = "https://github.com/Lymia/static-events.git" }
thiserror = "1.0.19"
tokio = { version = "0.2.21", features = ["full"] }
tracing = { version = "0.1.10", features = ["log"] }
tracing-futures = "0.2.0"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.0"

sylphie_derive = { version = "0.1.0", path = "../sylphie_derive" }

[build-dependencies]
rustc_version = "0.2"
