[package]
name = "sylphie_utils"
version = "0.1.0"
authors = ["Lymia Aluysia <lymia@lymiahugs.com>"]
edition = "2018"

[features]

[dependencies]
arc-swap = "0.4.6"
dashmap = "3.11.10"
futures = "0.3.0"
fxhash = "0.2.1"
lazy_static = "1.4.0"
plru = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1.10", features = ["log"] }

sylphie_core = { version = "0.1.0", path = "../sylphie_core" }

[build-dependencies]
rustc_version = "0.2"
